adding details to the about me page

--- a/intro_to_web_dev/HTML_Project/my_blog/about.html
+++ b/intro_to_web_dev/HTML_Project/my_blog/about.html
@@ -6,7 +6,39 @@
     <title>My About Page</title>
 </head>
 <body>
-    <h1>About Me</h1>
     <a href="index.html">Go Home</a>
+    <h1>About Me</h1>    
+    <div>
+        <!--Few jottings about me-->
+        <p>I am Leonard, a Data Engineer who loves data and building applications.</p>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <p>Laborum voluptates quas quidem velit!</p>
+        <p>In quas laudantium atque sint?</p>
+        <p>Qui reiciendis quasi tenetur minima.</p>
+        <p>Possimus eaque commodi perferendis blanditiis.</p>
+    </div>
+    <div>
+        <h2>Career and Education</h2>
+        <div>
+            <h2>My Recent Jobs</h2>
+            <ol>
+                <li>Data Engineer Specialist</li>
+                <li>AI/ML Engineer</li>
+                <li>GCP Data Engineer</li>
+                <li>Data Analytics and Visualization Bootcamp Instructor</li>
+                <li>Lead Data Analyst</li>
+            </ol>
+        </div>
+        <div>
+            <h2>My Educational Background</h2>
+            <p>I come from a non traditional computer science background.</p>
+            <ol>
+                <li>UC Berkeley 2021 - Data Analytics and Visualization Bootcamp</li>
+                <li>Coventry University 2013 - MSc Petroleum and Environmental Technology</li>
+                <li>Universidad de Matanzas Camilo Cienfuegos 2011 - BSc Mechanical Engineering</li>
+            </ol>
+
+        </div>
+    </div>
 </body>
 </html>
