added post to index file

--- a/intro_to_web_dev/HTML_Project/my_blog/index.html
+++ b/intro_to_web_dev/HTML_Project/my_blog/index.html
@@ -7,5 +7,26 @@
 </head>
 <body>
     <a href="about.html">My About Page</a>
+    <h1>Life of a Techie</h1>
+    <div>
+        <h3>Title: Boring Monday</h3>
+        <img src="IMG_1143.jpg">
+        <h3>Author: @dataguru_24</h3>
+        <h3>Posted: 2024-09-30 20:23 PST</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis vel laborum laboriosam, at obcaecati beatae vitae fugiat amet dolore libero, vero ducimus eveniet a laudantium, fugit maiores rerum error quasi.</p>
+        <p>A unde qui mollitia voluptatem nihil tempore, voluptatum debitis, sunt aliquam ullam laudantium dignissimos, corporis maxime inventore ipsa. Expedita, eligendi assumenda consequuntur alias cumque possimus corrupti dicta autem! Libero, rem.</p>
+        <p>Magni, tempore. Culpa nemo asperiores quod necessitatibus, quaerat dignissimos ducimus voluptate sint tenetur blanditiis rem beatae esse enim veritatis animi quisquam, molestias a eum expedita! Minus, placeat. Inventore, in doloremque.</p>
+        <p>Sit quia unde delectus temporibus consectetur ipsam ratione dolores quasi odio voluptate fugit, aut voluptatem natus cum numquam libero nemo pariatur ea mollitia? Sed quod nihil perferendis aut. Alias, nihil.</p>
+        <p>Dolorem, nisi. Ipsum, totam fugiat. Maiores itaque magni dolore deserunt porro ullam, similique delectus ducimus facere aut debitis velit aperiam distinctio vel, est reprehenderit quos voluptatem sint, consequuntur dicta et!</p>
+    </div>
+    <div>
+        <h3>Title: Data viz with Tableau</h3>
+        <img src="fiscal_ranking.png">
+        <h3>Author: @viz-a-viz</h3>
+        <h3>Posted: 2024-09-30 20:29 PST</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic reprehenderit totam quam natus nulla temporibus consectetur, doloribus corporis sed tempore odio dicta ipsum id a, earum eos non quo corrupti?</p>
+        <p>Maiores vel dolorem placeat impedit assumenda voluptate explicabo magni odio ex quidem, delectus ullam facilis ab ad eius sed quasi dolorum quisquam fugit amet. Quidem officiis deleniti odio sint beatae.</p>
+        <p>Deleniti dolore neque itaque similique, nesciunt quae debitis autem cumque illo a inventore alias laboriosam repellendus. Quaerat ducimus quibusdam exercitationem velit aspernatur alias dolorem aperiam? Doloribus placeat numquam ad eos.</p>
+    </div>
 </body>
 </html>
