adding nav elements

--- a/intro_to_web_dev/HTML_Project/my_blog/index.html
+++ b/intro_to_web_dev/HTML_Project/my_blog/index.html
@@ -6,7 +6,12 @@
     <title>My Super Cool Blog</title>
 </head>
 <body>
-    <a href="about.html">My About Page</a>
+    <nav>
+        <h1>
+            <a href="about.html">My About Page</a>
+        </h1>
+    </nav>
+    
     <h1>Life of a Techie</h1>
     <div>
         <h3>Title: Boring Monday</h3>
