--- a/intro_to_web_dev/HTML_Project/my_blog/about.html
+++ b/intro_to_web_dev/HTML_Project/my_blog/about.html
@@ -6,8 +6,13 @@
     <title>My About Page</title>
 </head>
 <body>
-    <a href="index.html">Go Home</a>
-    <h1>About Me</h1>    
+    <nav>
+        <h1>
+            <a href="index.html">Go Home</a>
+        </h1>        
+    </nav>
+   
+    <h2>About Me</h2>    
     <div>
         <!--Few jottings about me-->
         <p>I am Leonard, a Data Engineer who loves data and building applications.</p>
